<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerMainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Billing Information" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Name" />

                    <TextView
                        android:id="@+id/textViewFullName"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="To be filled" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Address" />

                    <TextView
                        android:id="@+id/textViewFullAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="To be filled" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Meter ID" />

                    <TextView
                        android:id="@+id/textViewPrevMeterID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="To be filled" />
                </TableRow>
            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Meter reading information" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Php per KWh" />

                    <TextView
                        android:id="@+id/textViewCurrPerKWh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Php 0.00" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Reading of KWh" />

                    <TextView
                        android:id="@+id/textViewReadingofKWh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="To be filled" />
                </TableRow>

            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Billing Statement" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Computation of Billing: " />

                    <TextView
                        android:id="@+id/textViewComputationBilling"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Result of PhPperKWh x total KWh" />
                </TableRow>

            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal">

                    <Button
                        android:id="@+id/buttonSettings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings" />

                    <Button
                        android:id="@+id/buttonHistory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/history" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal">

                    <Button
                        android:id="@+id/buttonAnnouncement"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/announcements" />

                    <Button
                        android:id="@+id/buttonReports"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reports_requests" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal">

                    <Button
                        android:id="@+id/buttonTempLogOut"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Logout" />
                </TableRow>

            </TableLayout>
        </LinearLayout>
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>